# results

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  result.cc
lib/include/: option.hh  result.hh  utils.hh
results/: CMakeLists.txt
results/include/results/: option.hh  result.hh  utils.hh
results/src/: option.cc  result.cc  utils.cc  utils.hh
results/test/: option.cc  result.cc  utils.cc
src/: CMakeLists.txt  option.cc  option.hh  optional.cc  optional.hh  result.cc  result.hh  utils.cc  utils.hh
test/: CMakeLists.txt  option.cc  optional.cc  result.cc  utils.cc
